--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #Gradle
-org.gradle.jvmargs=-Xmx4G -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx4G"
+org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 org.gradle.daemon=true
@@ -8,6 +8,7 @@ org.gradle.parallel=true
 #Kotlin
 kotlin.code.style=official
 kotlin.js.compiler=ir
+kotlin.native.disableCompilerDaemon = true
 
 #Android
 android.useAndroidX=true
