--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,13 +12,11 @@ napier = "2.7.1"
 buildConfig = "4.1.1"
 kotlinx-coroutines = "1.8.1"
 ktor = "2.3.10"
-composeIcons = "1.1.0"
 kotlinx-serialization = "1.6.3"
 kotlinx-datetime = "0.5.0"
-koin = "3.5.3"
+koin = "3.6.0-Beta4"
 koin-compose = "1.2.0-Beta4"
-sqlDelight = "2.0.1"
-room = "2.7.0-alpha02"
+room = "2.7.0-alpha03"
 sqlite = "2.5.0-alpha02"
 ksp = "2.0.0-1.0.21"
 
